--- a/photo-gallery.css
+++ b/photo-gallery.css
@@ -57,3 +57,49 @@ li.dropdown1, li.dropdown2, li.dropdown3, li.dropdown4 {
 .dropdown1:hover .dropdown-content1, .dropdown2:hover .dropdown-content2, .dropdown3:hover .dropdown-content3, .dropdown4:hover .dropdown-content4{
 	display: block;
 }
+
+.mountain-logo {
+	width: 60px; 
+	position: relative; 
+	top: 5px;
+}
+
+#footer {
+	background-color: #3C9BC9;
+	z-index: 1;
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	width: 100%;
+	height: 25px;
+	text-align: center;
+}
+.gallery {
+	margin: 10px;
+	float: left;
+	width: 350px;
+	border: 3px solid #7C7C7C;
+}
+
+.gallery-near-footer {
+	margin: 0px 10px 20px 10px;
+	float: left;
+	width: 350px;
+	border: 3px solid #626262;
+}
+
+.gallery img, .gallery-near-footer img {
+	width: 350px;
+	height: 290px;
+}
+
+.gallery:hover, .gallery-near-footer:hover {
+	box-shadow: 0px 0px 10px grey;
+	border: 3px #626262
+}
+
+.desc {
+	padding: 15px;
+	text-align: center;
+	font-size: 30px;
+}
