--- a/lynn-valley.css
+++ b/lynn-valley.css
@@ -78,6 +78,7 @@ li.dropdown1, li.dropdown2, li.dropdown3, li.dropdown4 {
 }
 #lynnvalley-text {
 	font-size: 25px;
+	margin-right: 300px;
 }
 
 #title {
