--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,12 @@ li.dropdown1, li.dropdown2, li.dropdown3, li.dropdown4 {
 	display: block;
 }
 
-#home-text {
+.home-text {
 	font-size: 25px;
-	margin: 0px 10px;
+	margin: 0px 100px 50px 100px;
 }
 
-#home-text::first-letter {
+.home-text::first-letter {
 	font-weight: bold;
 	font-size: 40px;
 	text-align: left;
@@ -82,6 +82,8 @@ li.dropdown1, li.dropdown2, li.dropdown3, li.dropdown4 {
 	border: double 15px #3C9BC9;
 	border-radius: 30px;
 	margin: 0px 0px 0px 30px;
+	position: relative;
+	bottom: 25px;
 }
 
 .mountain-logo {
@@ -99,4 +101,26 @@ li.dropdown1, li.dropdown2, li.dropdown3, li.dropdown4 {
 	width: 100%;
 	height: 25px;
 	text-align: center;
+}
+
+#embed-map {
+	width: 700px;
+	height: 400px;
+	margin: 90px 0px 0px 60px;
+}
+
+.map-positioning {
+	display: flex;
+	justify-content: space-around;
+}
+
+#map-text {
+	position: relative;
+	top: 100px;
+	font-size: 25px;
+	width: 600px;
+}
+
+#line {
+	border: solid 1px black;
 }
