--- a/bibliography.css
+++ b/bibliography.css
@@ -113,3 +113,9 @@ li.dropdown1, li.dropdown2, li.dropdown3, li.dropdown4 {
 	bottom: 300px;
 	right: 100px;
 }
+
+#title {
+	font-size: 40px;
+	text-align: center;
+	text-shadow: 5px 5px 5px #73C5ED;
+}
