--- a/photo-gallery.css
+++ b/photo-gallery.css
@@ -111,3 +111,13 @@ li.dropdown1, li.dropdown2, li.dropdown3, li.dropdown4 {
 	text-align: center;
 	font-size: 30px;
 }
+
+#title {
+	font-size: 40px;
+	text-align: center;
+	text-shadow: 5px 5px 5px #73C5ED;
+}
+
+
+
+
